js works but killed-list has CSS issues (too big, background color blocks suck)

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,11 +145,15 @@ footer {
 }
 
 .goblins-killed p {
-    font-size: 2rem;
+    font-size: 2em;
     color: white;
     background-color: rebeccapurple;
     padding: 20px;
     border-radius: 15px;
+}
+
+.killed-list {
+    font-size: 1em;
 }
 
 form {
